# PG_ANN

./: .gitignore  CMakeLists.txt  README.md
docs/: GAP_ANALYSIS.md  HANDOFF.md  RESEARCH_IMPLEMENTATION_PLAN.md  ROADMAP.md
include/: gorgeous_layout.h  pipeline_search.h
include/integrations/: disk_index_relayout.h  gorgeous_original.h  linux_aligned_file_reader.h  pipeann_builder.h
include/io/: page_reader.h
include/quant/: approx_distance.h
include/search/: candidate_pool.h  graph_cache.h  search_session.h
include/tools/: build_pipeline.h  tool_cli.h
src/: bench_compare_main.cpp  bench_main.cpp  bench_merge_main.cpp  build_main.cpp  gorgeous_layout.cpp  ground_truth_main.cpp  inspect_main.cpp  main.cpp  pipeline_search.cpp  search_main.cpp
src/integrations/: disk_index_relayout.cpp  gorgeous_original.cpp  linux_aligned_file_reader.cpp  pipeann_builder.cpp
src/io/: page_reader.cpp
src/quant/: approx_distance.cpp
src/search/: candidate_pool.cpp  graph_cache.cpp  search_session.cpp
src/tools/: build_pipeline.cpp  tool_cli.cpp
tests/: build_pipeline_test.cpp  integration_modules_test.cpp  pipeline_search_test.cpp  tool_cli_test.cpp
